Add content update to init process (#421)
* Add content update to init process

Improve logging

* Fix compile error

* Push lastes changes

* Interrupt update on error

Improves logging and removes duplicated code

* Refactor CTI model classes

* Add missing statements and changelog entry

* Remove single use variables